main/static/main.css
.games-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 20px;
    padding: 20px;
}

body {
    margin: 0;
    font-family: Arial, sans-serif;
    background-color: #17171a;
    color: #eee;
}

.game-canvas-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: calc(100vh - 100px);
    width: 100vw;
    overflow: hidden;
}

main {
    height: calc(100% - 100px);
}

header {
    text-align: center;
    padding: 20px;
}

footer {
    text-align: center;
    padding: 10px;
    background-color: #222;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 100px;
}

.game-canvas {
    height: auto;
    width: 100%;
    max-height: calc(100vh - 100px);
    max-width: 100vw;
    background-color: #000000;
    border-radius: 8px;
    justify-self: center;
    object-fit: contain;
    /* Prevent default touch actions for better mobile support */
    touch-action: none;
}

button {
    /* Prevent default touch actions for better mobile support */
    touch-action: none;
}

.no-style-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

.pixel-image {
    image-rendering: pixelated;
}

.hidden {
    display: none;
}

.text-button {
    /* Button with no button styling, just clickable text */
    background: none;
    border: none;
    color: inherit;
    font: inherit;
    cursor: pointer;
}

